# Central-ble-esp32-for-multiple-remotes

./: .gitignore  CMakeLists.txt  README.md  nimble-espressif-examples.lnk  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  source.code-workspace
main/: CMakeLists.txt  Kconfig.projbuild  ble-cts-central.cpp  ble-cts-central.h  ble_cts_cent.h  debug.cpp  debug.h  main.cpp  partitions.h  serial-module.cpp  serial-module.h  util.h  uuids.h
main/bluetooth/: ble-listener.cpp  ble-listener.h  ble-propagator.cpp  ble-propagator.h  bluetooth.cpp  bluetooth.h  i-ble-listener.h  i-ble-propagator.h
main/gpios/: gpio-handler.cpp  gpio-handler.h  gpio-manager.cpp  gpio-manager.h  gpio.cpp  gpio.h  gpios.h  input-gpio.cpp  input-gpio.h  output-gpio.cpp  output-gpio.h
main/i2c/: i2c-bus.cpp  i2c-bus.h
main/keyboard/: i-keyboard-listener.h  i-keyboard-propagator.h  keyboard-listener.cpp  keyboard-listener.h  keyboard-manager.cpp  keyboard-manager.h  keyboard-propagator.cpp  keyboard-propagator.h
main/keyboard/button/: button-defs.h  button-listener.cpp  button-listener.h  button-propagator.cpp  button-propagator.h  button-task.cpp  button.cpp  (+4 more)
main/led/: led-manager.cpp  led-manager.h  led.cpp  led.h
main/scheduler/: counter.cpp  counter.h  defs.h
main/screen-driver/: SSD1305_OLED.cpp  SSD1305_OLED.h  SSD1305_OLED_Print.cpp  SSD1305_OLED_Print.h  SSD1305_OLED_font.h  SSD1305_OLED_graphics.cpp  SSD1305_OLED_graphics.h  SSD1305_OLED_icons.h  screen-driver.cpp  screen-driver.h
main/util/: defs.h  listener-priority.h  misc.cpp  misc.h  misc.hpp  task.cpp  task.h
(+10 files in other folders)
